# twin-neighbor-embedding

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
batches/: batch.py
data/networks/real-world/: homer.mat  karate.mat  polblogs-lwcc.mat  tabula-liver.mat
data/networks/synthetic/: sbm-er-3modes.mat
notebooks/: all-embedding-algorithms.ipynb  coil20.ipynb  metrics.ipynb  paper_figures.ipynb  twin-gui.ipynb
thesis/: abstract.typ  background.typ  commenting.typ  conf.typ  config.typ  context.typ  contributions.typ  conventional.typ  dimensionality.typ  evaluation.typ  force-based.typ  introduction.typ  macros.typ  metrics.typ  motivation.typ  optimizations.typ  problem.typ  problem_description.typ  purpose.typ  ref.bib  ref.yaml  related.typ  research-gap.typ  sota.typ  spectral.typ  styling.typ  thesis.typ
twin/: __init__.py  batching.py  config.py  dataset.py  embedding.py  features.py  graphmatrix.py  metadata.py  metrics.py  paper_figures.py  pipelines.py  plots.py  twin_embedding.py
