[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "twin"
version = "0.0.1"
description = "Twin Neighbor Embedding method (TWIN)"
authors = [
  { name = "ADNX" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.11"
dependencies = [
    "distinctipy>=1.3.4",
    "leidenalg>=0.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "python-dotenv>=1.2.1",
    "python-igraph>=1.0.0",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sgtsnepi",
    "Shapely>=2.1.2",
    "tqdm>=4.67.1",
    "typeguard>=4.4.4",
    "typer>=0.21.1",
]

[project.optional-dependencies]
jupyter = ["jupyter>=1.1.1"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["twin"]
force-sort-within-sections = true
